--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -20,7 +20,7 @@
       <h1><a href="{{ " /" | absolute_url }}">{{ site.title | default: site.github.repository_name }}</a></h1>
 
       <!-- {% if site.logo %} -->
-      <img src="images/integraph-logo.png" alt="Logo" />
+      <img src="/images/integraph-logo.png" alt="Logo" />
       <!-- {% endif %} -->
 
       <p>{{ site.description | default: site.github.project_tagline }}</p>
